force-app/env/objects/FeatureFlagSetting__mdt/FeatureFlagSetting__mdt.object-meta.xml
<CustomObject>
    <description
  >Setting for capturing a feature flag and how it should be processed.</description>
    <label>Feature Flag Setting</label>
    <pluralLabel>Feature Flag Settings</pluralLabel>
</CustomObject>