force-app/env/objects/FeatureFlagSetting__mdt/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <description
  >The name of the feature flag resolver class that should be used.</description>
    <inlineHelpText
  >The name of the feature flag resolver class that should be used.</inlineHelpText>
    <label>Class Name</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>