force-app/env/objects/FeatureFlagSetting__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not a Salesforce-driven feature is toggled on.</description>
    <inlineHelpText>Whether or not a Salesforce-driven feature is toggled on.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>