force-app/env/objects/FeatureFlagSetting__mdt/fields/RBACCategory__c.field-meta.xml
<CustomField>
    <fullName>RBACCategory__c</fullName>
    <description>Category of permissions used to determine whether or not a user has a feature active for them.</description>
    <inlineHelpText>Category of permissions used to determine whether or not a user has a feature active for them.</inlineHelpText>
    <label>RBAC Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Profile</fullName>
                <default>true</default>
                <label>Profile</label>
            </value>
            <value>
                <fullName>Permission Set</fullName>
            </value>
            <value>
                <fullName>Public Group</fullName>
            </value>
            <value>
                <fullName>Custom Permission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>