force-app/env/objects/FeatureFlagSetting__mdt/fields/RBACCategoryValue__c.field-meta.xml
<CustomField>
    <fullName>RBACCategoryValue__c</fullName>
    <description>The value used to match if using RBAC Category and the RBACFeatureResolver. Can be a comma-delimited string of appropriate values. If values exceeds 255 characters, consider a different mechanism for giving access to a feature, such as using a single custom permission.</description>
    <inlineHelpText>The value used to match if using RBAC Category and the RBACFeatureResolver. Can be a comma-delimited string of appropriate values. If values exceeds 255 characters, consider a different mechanism for giving access to a feature, such as using a single custom permission.</inlineHelpText>
    <label>RBAC Category Value</label>
    <type>TextArea</type>
</CustomField>